--- a/teste1/index.html
+++ b/teste1/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Stalinist+One&display=swap" rel="stylesheet">
-    <title>jjJogos</title>
+    <title>OnGames</title>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
         <div class="desfoque"></div>
         
         <header>
-            <a href="#"><h1 class="logo">jj<span>Jogos.com</span></h1></a>
+            <a href="#"><h1 class="logo">On<span>Games.com</span></h1></a>
             <ul>
                 <li><a href="#">Jogos</a></li>
                 <li><a href="#">Informações</a></li>
