--- a/teste1/campoMinado.html
+++ b/teste1/campoMinado.html
@@ -16,7 +16,7 @@
 
     <section>
         <header>
-            <a href="index.html"><h1 class="logo">jjJogos.com</h1></a>
+            <a href="index.html"><h1 class="logo">OnGames.com</h1></a>
             <ul>
                 <li><a href="#">Jogos</a></li>
                 <li><a href="#">Informações</a></li>
