--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="campoMinado.html">Jogar</a>
                 </div>
                 <div class="textBox adivinhacao">
-                    <h2>Adivinhação<br>Sobre <span>o jogo.</span></h2>
+                    <h2>Adivinhação<br><span>Sobre o jogo.</span></h2>
                     <p>
                         O jogo de adivinhação é um jogo onde o jogador tenta adivinhar um número entre 1 e 100. O jogo informa se o número é maior ou menor que o número escolhido. O jogador tem um número limitado de tentativas para adivinhar o número correto. Se o jogador adivinhar o número correto, o jogo termina e o jogador vence. Se o jogador não adivinhar o número correto dentro do número de tentativas, o jogo termina e o jogador perde.
                     </p>
